# vid_sampler

./: README.md  box_32x32.geojson  pyproject.toml  requirements.txt  setup.py  vid_sample.py
src/vid_sampler/: __init__.py  __main__.py  functions.py  geotiff_collage.py
src/vid_sampler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
